add animation, snackbar with result

--- a/src/components/Block/styles.scss
+++ b/src/components/Block/styles.scss
@@ -14,4 +14,12 @@
   &.island {
     background-color: #90a897;
   }
+
+  &.current {
+    background-color: #fedd61;
+  }
+
+  &.foundPart {
+    background-color: #00bcd4;
+  }
 }
