--- a/src/components/Settings/styles.scss
+++ b/src/components/Settings/styles.scss
@@ -1,3 +1,5 @@
+@import '../../styles/fonts.scss';
+
 .settings {
   .form {
     font-size: 18px;
@@ -22,12 +24,15 @@
         display: flex;
 
         & > div {
-          display: inline-flex;
-          align-items: baseline;
-          width: 50%;
+          flex-grow: 1;
 
-          span {
-            margin-right: 10px;
+
+          &:first-child {
+            margin-right: 20px;
+          }
+
+          label {
+            font-family: $open-sans-condensed !important;
           }
         }
       }
